--- a/start/lesson4/index.html
+++ b/start/lesson4/index.html
@@ -19,6 +19,17 @@
 
 <body>
     
+<script>
+  function compare(a, b){
+    if (a > b ){
+      console.log(b + ' is less than ' + a);
+    }
+    else{
+      console.log(a + ' is less than ' + b);
+    }
+  }
+</script>
+
 </body>
 
 </html>
